add react project lugares seguros temporaly

--- a/02-lugar-html_css_js/registerPlace/style.css
+++ b/02-lugar-html_css_js/registerPlace/style.css
@@ -13,7 +13,7 @@ section form {
 
 section h3 {
   text-align: center;
-  color: #d0869d;
+  color: rgb(208, 134, 157);
   font-size: 1.5rem;
   margin-bottom: 2rem;
 }
